--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URLA=https://pgshopadmin.shop/mypgphone.shop
+NEXT_PUBLIC_API_URLA=workshop.pgphone-thai.shop
 
 
 NEXT_PUBLIC_NAME=My PG Phone
